--- a/css/TV_style.css
+++ b/css/TV_style.css
@@ -88,10 +88,17 @@ html, body{
 
 
 
-.choice {
+.guide {
     font-size: 35px;
     color : darkgoldenrod;
-    font-family: 'BinggraeSamanco-Bold';    
+    font-family: 'BinggraeSamanco-Bold';
+    position: relative;
+    align-items: center;
+    display : flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 
@@ -104,7 +111,7 @@ html, body{
 }
 
 
-.result_all .t{
+.t{
     
     border-color:white;
     border-style:solid;
@@ -126,17 +133,17 @@ html, body{
     flex-direction: column;
 }
 
-.result_EBS td{
-    
-    border-color:white;
-    border-style:solid;
-    border-width:3px;
-    font-family:'BinggraeSamanco-Bold';
-    font-size:35px;
-    padding:10px 15px;
-    word-break:keep-all;
-    background-color:#dcb088;
-    color : white;
+
+.result_MBC{
+    display : none;
     align-items: center;
-    align-content: center;
+    position : relative;
+    flex-direction: column;
+}
+
+.result_KBS{
+    display : none;
+    align-items: center;
+    position : relative;
+    flex-direction: column;
 }
