--- a/css/TV_style.css
+++ b/css/TV_style.css
@@ -20,7 +20,7 @@ html, body{
 .bkg{
     background-image: url("../images/bkg.jpg");
     width: 100%;
-    height : 100%;
+    height : 200%;
     position: absolute;
     background-size: cover;
     top : 0;
@@ -66,19 +66,19 @@ html, body{
 }
 
 .bt{
-	width:100px;
+	width:200px;
 	height: 50px;
 	color: white;
 	background: #353535;
 	font-size: 30px;
 	border: 3px;
-    border-color : aliceblue;
+    border-color : black;
     background-color: #dcb088;
     align-items: center;
     position: relative;
     font-weight: bold;
-    left: 25%;
-    right: 25%;
+    text-align: center;
+    left: 29%;
 }
 
 .bt:hover{
@@ -102,90 +102,47 @@ html, body{
 }
 
 
-.result_all{
-    display : none;
-    align-items: center;
-    position : relative;
+.result_movie{
+    border: 1px solid gray;
+    display: none;
+    position : absolute;
     text-align: center;
     flex-direction: column;
-}
-
-
-.t{
+    left: 37%;
+    right: auto;
     
-    border-color:white;
-    border-style:solid;
-    border-width:3px;
-    font-family:'BinggraeSamanco-Bold';
-    font-size:35px;
-    padding:10px 15px;
-    word-break:keep-all;
-    background-color:burlywood;
-    color : white;
-    align-items: center;
-    align-content: center;
+
+}
+.tg_04{
+    font-size : 28px;
+    font-family: 'BinggraeSamanco-Bold';
+    background-color: antiquewhite;
+    text-align: center;
+    width: 100px;
+    height: 50px;
 }
 
-.result_EBS{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
+.tg_03{
+    font-size : 20px;
+    font-family: 'BinggraeSamanco-Bold';
+    background-color: #efefef;
+    width: 100px;
+    height: 50px;    
+}
+
+.tg_02{
+    font-size : 20px;
+    font-family: 'BinggraeSamanco-Bold';
+    background-color: #efefef;
+    width: 100px;
+    height: 50px;
+}
+.tg_01{
+    font-size : 20px;
+    font-family: 'BinggraeSamanco-Bold';
+    background-color: whitesmoke;
+    width: 200px;
+    height: 50px;
 }
 
 
-.result_MBC{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_KBS{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_SBS{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_TBC{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_JTBC{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_YTN{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_OCN{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
-
-.result_channelA{
-    display : none;
-    align-items: center;
-    position : relative;
-    flex-direction: column;
-}
